--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@ body {
     background-color: #242424;
     padding: 10px;
     border-radius: 12px;
-    align-items: center;
-    font-family: monospace;
+	align-items: center;
+	font-family: monospace;
+}
+header {
+    font-size: 48px;
+    font-weight: ultralight;
+    font-style: italic;
 }
