--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,5 @@ body {
     padding: 10px;
     border-radius: 12px;
     align-items: center;
-    font-family: 'Times New Roman';
+    font-family: 'Comic Sans MS';
 }
